syntax = "proto3";

package usertest;

option go_package = "grpc-protobuf/usertest";

service API {
	rpc CreateUser(User) returns (Response) {}
	rpc CreateUsers(stream User) returns (ResponseManyUsers) {}
}

message User {
	string id = 1;
	string email = 2;
	string name = 3;
	string password = 4;
}

message Response {
	string message = 1;
	uint64 code = 2;
	User user = 3;
}

message ResponseManyUsers {
	string message = 1;
	uint64 code = 2;
	uint64 count = 3;
}